change of heading

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 
   <h1>Hello world!</h1>
+  <h2>Testing - branch</h2>
 
 <h2>Welcome to the my first ever website. Here's a little bit about me:</h2>
 
